--- a/달꾸.html
+++ b/달꾸.html
@@ -209,8 +209,20 @@ ex.
     100% {left:100%;}
 }
 </div>
-(2) html삽입창에 아래 코드를 입력해주세요.
+(2) html 삽입창에 아래 코드를 입력해주세요.
 <div class="box">&lt;div class="brave"&gt;&lt;img src="https://t1.daumcdn.net/cafeattach/1XKJt/2a3d4d756f8398a8b2103b48eed5a9f1871199ab" width="50"&gt;&lt;  /div&gt;
+</div>
+        </pre>
+        <h4>7) 더보기 기능</h4>
+        <pre>
+(1) html 삽입창에 아래 코드를 입력해주세요.
+<div class="box">&lt;details&gt;
+    &lt;summary&gt;[summary]&lt;/summary&gt;
+    [content]
+&lt;/details&gt;
+</div>
+(2) 'style'태그 안에 아래 코드를 작성해주세요.
+<div class="box"> summary img {pointer-events: none;}
 </div>
         </pre>
     </div><!--content-->
