--- a/인터넷창.html
+++ b/인터넷창.html
@@ -6,37 +6,58 @@
     <title>인터넷창</title>
     <style>
         * {margin: 0; padding: 0; box-sizing: border-box; list-style: none; text-decoration: none; color: inherit;}
+        body {background: url('뼈다귀배경.png') repeat top / cover;}
         input {display: none;}
-        .content {display:none;position: fixed;top:50%;left: 50%;transform: translate(-50%, -50%);width: 60%; height: 60vw;border:1px solid rgba(0, 0, 0, .3);background: #fff;}
-        .content .btns-row {position: absolute;top:0;left: 0;width: 100%;}
+        button {border: 0; background: unset;}
+        button label {display:block;width: 30px;height: 30px;background: url('logo_m.png') no-repeat center / cover; margin: 8px 12px;}
+        .content {display:none;position: fixed;top:50%;left: 50%;transform: translate(-50%, -50%);z-index:99999;width:60%;height:60vw;max-width: 500px; max-height: 500px;border:1px solid rgba(0, 0, 0, .3);background: #fff;}
+        .content .btns-row {position: absolute;top:0;left: 0;width: 100%;text-align: right;}
+        .content .btns-row label {margin: 0 5px;}
         .content .btns-row label[for="min"] {display:none;}
-        .bar {display:none;position:fixed; bottom: 0; left: 0; width: 100%;height: 30px; background: pink;}
+        .bar {display:none;position:fixed; bottom: 0; left: 0; width: 100%;height: 45px; background: rgba(255,255,255,.75);backdrop-filter: blur(10px);box-shadow: 0 -2px 3px rgba(0, 0, 0, .3);}
+        .bar .bar-open {position:absolute;top:5px;left: 5px;width:35px;height: 35px;background-image:url('logo_m.png');background-position:center;background-repeat: no-repeat;background-size: 25px;background-color: rgba(255,255,255,.3);border-radius: 3px;box-shadow: 0 0 2px rgba(0, 0, 0, .1);}
+        .bar .bar-open::after {content:'';position: absolute;bottom: 0;left: 50%;transform:translateX(-50%);width: 15px;height:3px;background:rgb(77, 77, 77);border-radius: 5px;transition: width .2s;}
+
         #open:checked ~ .content {display: block;}
-        #open:checked ~ .bar, #down:checked ~ .bar {display: block;}
-        
-        #max:checked ~ .content {width: 100%;height: 100%;}
+        #open:checked ~ .bar {display: block;}
+        #open:checked ~ .bar .bar-open {animation: up .3s alternate ease-in;}
+
+        #down:checked ~ button {pointer-events: none;}
+        #down:checked ~ .bar {display: block;}
+        #down:checked ~ .bar .bar-open {background-color: unset;box-shadow: unset;animation: down .3s alternate ease-in;}
+        #down:checked ~ .bar .bar-open::after {width: 10px;background: #888;}
+    
+        #max:checked ~ .content {top:0;transform: translate(-50%, 0);width:100%; height:100%;max-width: 100%;max-height: calc(100% - 45px);}
         #max:checked ~ .content .btns-row label[for="min"] {display: inline;}
         #max:checked ~ .content .btns-row label[for="max"] {display: none;}
+
+        @keyframes down {
+            0% {background-position: center -2px;}
+            50% {background-position: center 8px;}
+        }
+        @keyframes up {
+            50% {background-position: center -2px;}
+        }
     </style>
 </head>
 <body>
-   <button type="button"><label for="open">Click</label></button>
     <input type="radio" name="btns" id="open">
     <input type="radio" name="btns" id="down">
     <input type="radio" name="btns" id="close">
     <input type="radio" name="sizeBtns" id="min">
     <input type="radio" name="sizeBtns" id="max">
+    <button type="button"><label for="open"></label></button>
 
     <div class="content">
         <div class="btns-row">
             <label for="down">-</label>
             <label for="max">ㅁ</label>
-            <label for="min">o</label>
+            <label for="min">=</label>
             <label for="close">x</label>
         </div><!--btns-row-->
     </div><!--content-->
     <div class="bar">
-        <label for="open">dd</label>
+        <label for="open" class="bar-open"></label>
     </div><!--bar-->
 </body>
 </html>
