--- a/인터넷창.html
+++ b/인터넷창.html
@@ -8,28 +8,41 @@
         * {margin: 0; padding: 0; box-sizing: border-box; list-style: none; text-decoration: none; color: inherit;}
         body {background: url('뼈다귀배경.png') repeat top / cover;}
         input {display: none;}
-        button {border: 0; background: unset;}
-        button label {display:block;width: 30px;height: 30px;background: url('logo_m.png') no-repeat center / cover; margin: 8px 12px;}
-        .content {display:none;position: fixed;top:50%;left: 50%;transform: translate(-50%, -50%);z-index:99999;width:60%;height:60vw;max-width: 500px; max-height: 500px;border:1px solid rgba(0, 0, 0, .3);background: #fff;}
-        .content .btns-row {position: absolute;top:0;left: 0;width: 100%;text-align: right;}
-        .content .btns-row label {margin: 0 5px;}
-        .content .btns-row label[for="min"] {display:none;}
-        .bar {display:none;position:fixed; bottom: 0; left: 0; width: 100%;height: 45px; background: rgba(255,255,255,.75);backdrop-filter: blur(10px);box-shadow: 0 -2px 3px rgba(0, 0, 0, .3);}
-        .bar .bar-open {position:absolute;top:5px;left: 5px;width:35px;height: 35px;background-image:url('logo_m.png');background-position:center;background-repeat: no-repeat;background-size: 25px;background-color: rgba(255,255,255,.3);border-radius: 3px;box-shadow: 0 0 2px rgba(0, 0, 0, .1);}
-        .bar .bar-open::after {content:'';position: absolute;bottom: 0;left: 50%;transform:translateX(-50%);width: 15px;height:3px;background:rgb(77, 77, 77);border-radius: 5px;transition: width .2s;}
+        .openBtn {border: 0; background: unset;}
+        .openBtn label {display:block;width: 30px;height: 30px;background: url('logo_m.png') no-repeat center / cover; margin: 8px 12px;}
+        .content {display:none;position: fixed;top:50%;left: 50%;transform: translate(-50%, -50%);z-index:99999;width:60%;height:60vw;max-width: 500px; max-height: 500px;border:1px solid rgba(0, 0, 0, .3);background: #fff;border-radius: 5px;overflow: hidden;}
+        .content .btns-row {position: absolute;top:0;left: 0;width: 100%;display:flex;justify-content: space-between;background:rgb(192, 212, 230);}
+        .content .btns-row > div {display: flex;}
+        .content .btns-row .left-btn {margin-top: 10px;}
+        .content .btns-row .left-btn label {padding:2.5px 10px;border-radius: 10px 10px 0 0;background: rgb(103, 126, 151);margin-right: 0;}
+        .content .btns-row .right-btn {margin-top: 5px;}
+        .content .btns-row .right-btn label {margin: 0 8px;color:rgba(0, 0, 0, .3);}
+        .content .btns-row .right-btn label[for="min"] {display:none;}
+        .content .btns-row .right-btn label:hover {color: #000;}
+        .content .tab-item {display: none;height:100%;overflow-y: scroll;margin-top: 35px;padding-bottom:40px;}
+        .content .tab-item::-webkit-scrollbar {display: none;}
+        .content .tab-item p {padding:5px 10px;}
+        .bars {display:none;position:fixed; bottom: 0; left: 0;z-index:9999; width: 100%;height: 45px; background: rgba(255,255,255,.75);backdrop-filter: blur(10px);box-shadow: 0 -2px 3px rgba(0, 0, 0, .3);}
+        .bars .bar-open {position:absolute;top:5px;left: 5px;width:35px;height: 35px;background-image:url('logo_m.png');background-position:center;background-repeat: no-repeat;background-size: 25px;background-color: rgba(255,255,255,.3);border-radius: 3px;box-shadow: 0 0 2px rgba(0, 0, 0, .1);}
+        .bars .bar-open::after {content:'';position: absolute;bottom: 0;left: 50%;transform:translateX(-50%);width: 15px;height:3px;background:rgb(77, 77, 77);border-radius: 5px;transition: width .2s;}
 
         #open:checked ~ .content {display: block;}
-        #open:checked ~ .bar {display: block;}
-        #open:checked ~ .bar .bar-open {animation: up .3s alternate ease-in;}
+        #open:checked ~ .bars {display: block;}
+        #open:checked ~ .bars .bar-open {animation: up .3s alternate ease-in;}
 
-        #down:checked ~ button {pointer-events: none;}
-        #down:checked ~ .bar {display: block;}
-        #down:checked ~ .bar .bar-open {background-color: unset;box-shadow: unset;animation: down .3s alternate ease-in;}
-        #down:checked ~ .bar .bar-open::after {width: 10px;background: #888;}
+        #down:checked ~ .openBtn {pointer-events: none;}
+        #down:checked ~ .bars {display: block;}
+        #down:checked ~ .bars .bar-open {background-color: unset;box-shadow: unset;animation: down .3s alternate ease-in;}
+        #down:checked ~ .bars .bar-open::after {width: 10px;background: #888;}
     
-        #max:checked ~ .content {top:0;transform: translate(-50%, 0);width:100%; height:100%;max-width: 100%;max-height: calc(100% - 45px);}
+        #max:checked ~ .content {top:0;transform: translate(-50%, 0);width:100%; height:100%;max-width: 100%;max-height: calc(100% - 45px);border-radius: unset;}
         #max:checked ~ .content .btns-row label[for="min"] {display: inline;}
         #max:checked ~ .content .btns-row label[for="max"] {display: none;}
+
+        #tabBtn1:checked ~ div label[for="tabBtn1"] {background:#fff;}
+        #tabBtn1:checked ~ .tabCon1 {display:block;}
+        #tabBtn2:checked ~ div label[for="tabBtn2"] {background:#fff;}
+        
 
         @keyframes down {
             0% {background-position: center -2px;}
@@ -46,17 +59,35 @@
     <input type="radio" name="btns" id="close">
     <input type="radio" name="sizeBtns" id="min">
     <input type="radio" name="sizeBtns" id="max">
-    <button type="button"><label for="open"></label></button>
+    <button type="button" class="openBtn"><label for="open"></label></button>
 
     <div class="content">
+        <input type="radio" name="tab" id="tabBtn1" checked>
+        <input type="radio" name="tab" id="tabBtn2">
         <div class="btns-row">
-            <label for="down">-</label>
-            <label for="max">ㅁ</label>
-            <label for="min">=</label>
-            <label for="close">x</label>
+            <div class="left-btn">
+                <label for="tabBtn1">공지</label>
+                <label for="tabBtn2">이미지</label>
+            </div><!--left-btn-->
+            <div class="right-btn">
+                <label for="down">-</label>
+                <label for="max">ㅁ</label>
+                <label for="min">=</label>
+                <label for="close">x</label>
+            </div><!--right-btn-->
         </div><!--btns-row-->
+        <div class="tabCon1 tab-item">
+            <p>
+                Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.
+                Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.
+                Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.
+            </p>
+        </div><!--tabCon1-->
+        <div class="tabCon2 tab-item">
+
+        </div><!--tabCon2-->
     </div><!--content-->
-    <div class="bar">
+    <div class="bars">
         <label for="open" class="bar-open"></label>
     </div><!--bar-->
 </body>
