--- a/카톡공지.html
+++ b/카톡공지.html
@@ -10,7 +10,7 @@
         .noticeWrap .row1 {display: flex;justify-content: space-between;align-items: center;box-sizing: border-box;padding:5px 10px;}
         .noticeWrap .row1 > .notice-img {display: inline-block;width: 30px;height: 30px;background: url('아이콘이미지.png') no-repeat center / contain;}
         .noticeWrap .row1 > .notice-txt {display: inline-block;width:100%;box-sizing: border-box;padding:0 5px;text-align: left;white-space: nowrap;overflow: hidden;text-overflow: ellipsis;}
-        .noticeWrap .row1 > .notice-more {display: inline-block;width: 30px;height:30px;background: url('아이콘이미지2.png') no-repeat center / 15px;transition: .2s;}
+        .noticeWrap .row1 > .notice-more {display: inline-block;width: 30px;height:30px;background: url('아이콘이미지2.png') no-repeat center / 15px;}
         .noticeWrap .row2 {display: none;justify-content: space-between;box-sizing: border-box;padding: 5px 10px;}
         .noticeWrap .row2 > label {display: inline-block;width: calc(50% - 5px);background: #eee;box-sizing: border-box;padding: 3px;text-align: center;border-radius: 5px;}
         .noticeWrap .row3 {display: none;box-sizing: border-box;padding:5px 10px;}
