카카오톡 완성

--- a/카카오톡.html
+++ b/카카오톡.html
@@ -17,7 +17,7 @@
         #kakaoTalkWrap > .kakao-main {background: #f0f0f0;}
         #kakaoTalkWrap > .kakao-main > .main-top {position: absolute;top:0;left: 0;width: 100%;line-height: 50px;box-sizing: border-box;padding:0 20px;background: #fcfcfc;font-weight:bold;color:#88ade4;font-size:18px;}
         #kakaoTalkWrap > .kakao-main > .main-my {display: flex;align-items: center;margin-top: 50px;padding: 10px 20px; box-sizing: border-box;}
-        #kakaoTalkWrap > .kakao-main > .main-my > .my-photo {display: inline;position: relative;width: 55px;height:50px;border-radius:20px;margin-right: 10px;overflow: hidden;}
+        #kakaoTalkWrap > .kakao-main > .main-my > .my-photo {flex-shrink: 0;position: relative;width: 55px;height:55px;border-radius:20px;overflow: hidden;}
         /* 프로필 사진 슬라이드 */
         #kakaoTalkWrap > .kakao-main > .main-my > .my-photo label {position: absolute; top:0; width: 100%;height:100%;background-repeat: no-repeat;background-position: center;background-size: cover;}
         #kakaoTalkWrap > .kakao-main > .main-my > .my-photo .photo1 {left:0;background-image: url('images/pic-1.jpg');}
@@ -25,15 +25,15 @@
         #kakaoTalkWrap > .kakao-main > .main-my > .my-photo .photo3 {left:200%;background-image: url('images/pic-3.jpg');}
         #kakaoTalkWrap > .kakao-main > .main-my > .my-photo .photo4 {left:300%;background-image: url('images/pic-4.jpg');}
         #kakaoTalkWrap > .kakao-main > .main-my > .my-photo .photo5 {left:400%;background-image: url('images/pic-5.jpg');}
-        #kakaoTalkWrap > .kakao-main > .main-my > .my-text {width:100%;}
-        #kakaoTalkWrap > .kakao-main > .main-my .name input {width: calc(100% - 20px);border: 0; background: unset;font-family: 'NIXGONM-Vb';}
-        #kakaoTalkWrap > .kakao-main > .main-my .word input {width: calc(100% - 20px);border: 0; background: unset;margin-top:5px;font-family: 'NIXGONM-Vb';font-size:12px;}
+        #kakaoTalkWrap > .kakao-main > .main-my > .my-text {width:100%;padding-left: 10px;box-sizing: border-box;}
+        #kakaoTalkWrap > .kakao-main > .main-my .name input {width: 100%;border: 0; background: unset;font-family: 'NIXGONM-Vb';box-sizing: border-box;}
+        #kakaoTalkWrap > .kakao-main > .main-my .word input {width: 100%;border: 0; background: unset;font-family: 'NIXGONM-Vb';font-size:12px;box-sizing: border-box;}
         #kakaoTalkWrap > .kakao-main > .main-ad {width:calc(100% - 40px); height:100px; margin: 20px auto;border-radius: 10px;background: url('images/banner1.jpg') no-repeat center / cover;}
         /* 친구 목록 */
         #kakaoTalkWrap > .kakao-main > .main-fr {padding: 0 20px;box-sizing: border-box;}
         #kakaoTalkWrap > .kakao-main > .main-fr .fr-top {position: relative;display: flex;justify-content: space-between;align-items: center;padding:10px 0;font-size: 10px;color:#88ade4;}
         #kakaoTalkWrap > .kakao-main > .main-fr .fr-list {display: flex;align-items: center;}
-        #kakaoTalkWrap > .kakao-main > .main-fr .fr-photo {width: 40px;height: 40px;border-radius: 15px;background: url('images/pic-6.jpg') no-repeat center / cover;}
+        #kakaoTalkWrap > .kakao-main > .main-fr .fr-photo {flex-shrink: 0;width: 40px;height: 40px;border-radius: 15px;background: url('images/pic-6.jpg') no-repeat center / cover;}
         #kakaoTalkWrap > .kakao-main > .main-fr .fr-text {margin-left: 10px;}
         #kakaoTalkWrap > .kakao-main > .main-fr .fr-text p {margin: 0;font-size:12px;}
         #kakaoTalkWrap > .kakao-main > .main-fr .fr-text span {font-size: 10px;}
@@ -44,18 +44,32 @@
         #kakaoTalkWrap > .kakao-main > .main-fr .fr-profile > div {position: absolute;bottom: 0; left: 0; width: 100%;text-align: center;}
         #kakaoTalkWrap > .kakao-main > .main-fr .fr-profile .info-photo {text-align: center;margin-bottom: 10px;}
         #kakaoTalkWrap > .kakao-main > .main-fr .fr-profile .info-photo-btn {display: inline-block;width: 80px;height: 80px;background: url('images/pic-6.jpg') no-repeat center / cover;border-radius: 30px;}
-        #kakaoTalkWrap > .kakao-main > .main-fr .fr-profile .fr-profile-info input {text-align: center;width: calc(100% - 20px);border:0;background: transparent;font-size: 14px;margin-bottom: 5px;color: #fff;}
+        #kakaoTalkWrap > .kakao-main > .main-fr .fr-profile .fr-profile-info input {text-align: center;width: calc(100% - 20px);border:0;background: transparent;font-size: 14px;margin-bottom: 5px;color: #fff;font-family: 'NIXGONM-Vb';}
         #kakaoTalkWrap > .kakao-main > .main-fr .fr-profile .fr-profile-info p {margin:0;}
         #kakaoTalkWrap > .kakao-main > .main-fr .fr-profile .fr-profile-chat {box-sizing: border-box;border-top: 1px solid #fff;margin-top: 30px;padding: 30px 0;}
-
-        #kakaoTalkWrap > .list-btn-wrap {display:flex;justify-content: space-between;align-items: center;position: absolute;bottom:0;left:0; width: 100%;height:50px;background:#fff;}
+        /* 채팅 */
+        #kakaoTalkWrap > .kakao-chat {background: #f0f0f0;}
+        #kakaoTalkWrap > .kakao-chat > .chat-top {position: absolute;top:0;left: 0;width: 100%;line-height: 50px;box-sizing: border-box;padding:0 20px;background: #fcfcfc;font-weight:bold;color:#88ade4;font-size:18px;}
+        #kakaoTalkWrap > .kakao-chat > .chat-ad {width:calc(100% - 40px); height:100px; margin: 70px auto 20px;border-radius: 10px;background: url('images/banner1.jpg') no-repeat center / cover;}
+        #kakaoTalkWrap > .kakao-chat > .chat-list {display: flex;justify-content: space-between;box-sizing: border-box;padding: 0 20px;}
+        #kakaoTalkWrap > .kakao-chat > .chat-list > div {display: flex;align-items: center;width: 100%;}
+        #kakaoTalkWrap > .kakao-chat > .chat-list .chat-profile {flex-shrink: 0;width: 45px;height:45px;margin-right:20px; border-radius:15px;background: url('images/pic-6.jpg') no-repeat center / cover;}
+        #kakaoTalkWrap > .kakao-chat > .chat-list .chat-msg {width: 100%;}
+        #kakaoTalkWrap > .kakao-chat > .chat-list .chat-msg input {width: 100%;box-sizing: border-box;border: 0;background: transparent;font-family: 'NIXGONM-Vb';font-size: 14px;padding:0;}
+        #kakaoTalkWrap > .kakao-chat > .chat-list .chat-msg p {width: 100%;margin: 0;font-size: 13px;color:#868686;}
+        #kakaoTalkWrap > .kakao-chat > .chat-list > span {flex-shrink: 0;color:#88ade4;font-size: 10px;}
+        /* 공지, 부속, 기타 */
+        #kakaoTalkWrap > .kakao-notice, #kakaoTalkWrap > .kakao-more, #kakaoTalkWrap > .kakao-etc {position: relative;;background: #f0f0f0;height:calc(100% - 50px) !important;box-sizing: border-box;overflow-y:scroll;}
+        #kakaoTalkWrap > .kakao-notice .kakao-close-btn, #kakaoTalkWrap > .kakao-more .kakao-close-btn, #kakaoTalkWrap > .kakao-etc .kakao-close-btn {position: absolute; top:20px;left: 20px;font-size: 20px;}
+        #kakaoTalkWrap > .list-btn-wrap {display:flex;justify-content: space-between;align-items: center;position: absolute;bottom:0;left:0; width: 100%;height:50px;background:#fcfcfc;}
         #kakaoTalkWrap > .list-btn-wrap > * {width: 100%;height:100%;text-align: center;cursor: default;background-position: center;background-repeat: no-repeat;background-size: 30px;}
+        /* 목록 이미지 */
         #kakaoTalkWrap > .list-btn-wrap .list-btn1 {background-image:url('images/카톡1.png');}
         #kakaoTalkWrap > .list-btn-wrap .list-btn2 {background-image:url('images/카톡2.png');}
         #kakaoTalkWrap > .list-btn-wrap .list-btn3 {background-image:url('images/카톡3.png');}
         #kakaoTalkWrap > .list-btn-wrap .list-btn4 {background-image:url('images/카톡4.png');}
         #kakaoTalkWrap > .list-btn-wrap .list-btn5 {background-image:url('images/카톡5.png');}
-        .kakao-open-btn {position:fixed; top: 20px; right: 20px;z-index: 999;}
+        .kakao-open-btn {position:fixed; top: 20px; left: 20px;z-index: 999;}
 
         /* 카카오톡 실행 */
         #kakaoTalkOpenBtn:checked ~ #kakaoTalkWrap {display: block;}
@@ -89,8 +103,8 @@
 <body>
     <input type="checkbox" id="kakaoTalkOpenBtn" checked>
     <div id="kakaoTalkWrap">
-        <input type="radio" name="kakao-list" id="listBtn1" checked>
-        <input type="radio" name="kakao-list" id="listBtn2">
+        <input type="radio" name="kakao-list" id="listBtn1">
+        <input type="radio" name="kakao-list" id="listBtn2" checked>
         <input type="radio" name="kakao-list" id="listBtn3">
         <input type="radio" name="kakao-list" id="listBtn4">
         <input type="radio" name="kakao-list" id="listBtn5">
@@ -152,15 +166,29 @@
             </div><!--main-fr-->
         </div><!--kakao-main-->
         <div class="kakao-chat">
-            <label for="kakaoTalkOpenBtn">닫기</label>
+            <div class="chat-top">채팅</div>
+            <div class="chat-ad"></div>
+            <label for="kakaoTalkOpenBtn" class="chat-list">
+                <div>
+                    <div class="chat-profile"></div>
+                    <div class="chat-msg">
+                        <input type="text" class="chat-name" value="할미꽃">
+                        <p>할미꽃을 본 적이 있어?</p>
+                    </div>
+                </div>
+                <span>오후 3:00</span>
+            </label><!--chat-list-->
         </div><!--kakao-chat-->
         <div class="kakao-notice">
+            <label for="kakaoTalkOpenBtn" class="kakao-close-btn">X</label>
             공지
         </div><!--kakao-notice-->
         <div class="kakao-more">
+            <label for="kakaoTalkOpenBtn" class="kakao-close-btn">X</label>
             부속
         </div><!--kakao-notice-->
         <div class="kakao-etc">
+            <label for="kakaoTalkOpenBtn" class="kakao-close-btn">X</label>
             기타
         </div><!--kakao-notice-->
         <div class="list-btn-wrap">
