--- a/네이버영화.html
+++ b/네이버영화.html
@@ -24,7 +24,7 @@
             --font-small: 12px;
             --font-mini: 10px;
         }
-        * {margin:0;padding:0;list-style: none;text-decoration: none;box-sizing: border-box;}
+        * {margin:0;padding:0;list-style: none;text-decoration: none;box-sizing: border-box;color: inherit;}
         .movieWrap {font-size: var(--font-basic);color: var(--color-black);}
         /* 영화 상단 */
         .movieWrap .movie-top {background-color:var(--color-main);overflow: hidden;}
@@ -38,29 +38,56 @@
         .movieWrap .movie-top .menu-list > li {display: inline-block;line-height: 20px;color:var(--color-white);padding:5px 10px;background-color: var(--rgba-white);border-radius: 100px;}
         /* 영화 영상 */
         .movieWrap .cont-wrapper {}
+        .movieWrap .cont-wrapper .info-wrapper {position: relative;padding: var(--inner-padding);border-radius: 20px 20px 0 0;background-color: var(--color-white);}
+        /* 소개 */
+        .movieWrap .cont-wrapper .info1 {display: block;}
         .movieWrap .cont-wrapper .info1 .movie-wrapper {position: relative;}
         .movieWrap .cont-wrapper .info1 .movie-wrapper::after {content:'';position: absolute;top: 0;left: 0;width: 100%;height: 30%;background: linear-gradient(to bottom, var(--color-main) 5%, transparent);}
         .movieWrap .cont-wrapper .info1 .movie-wrapper > div {position: absolute;bottom:-20px;left: 0;width: 100%;height: 40%;background: linear-gradient(to top, var(--color-main) 25%, transparent);}
         .movieWrap .cont-wrapper .info1 .movie-wrapper > iframe {width: 100%;height: 56.25vw;border: 0;}
-        .movieWrap .cont-wrapper .info1 .info-wrapper {position: relative;padding: var(--inner-padding);border-radius: 20px 20px 0 0;background-color: var(--color-white);}
-        /* 영화 기본 정보 */
         .movieWrap .cont-wrapper .info1 .summary-info {position: relative;width: 100%;display: flex;justify-content: space-between;}
         .movieWrap .cont-wrapper .info1 .summary-info > .text {width: 70%;padding-left:var(--inner-half);border-left: 5px solid var(--color-sub);}
         .movieWrap .cont-wrapper .info1 .summary-info > .text > p > span {padding-right:5px;color:var(--color-gray);}
-        .movieWrap .cont-wrapper .info1 .summary-info > .poster {position: absolute;bottom:0;right:0;width: 30%;border-radius: 10px;overflow: hidden;}
-        .movieWrap .cont-wrapper .info1 .summary-info > .poster > img {width: 100%;}
+        .movieWrap .cont-wrapper .info1 .summary-info > .poster {position: absolute;bottom:0;right:0;width: 30%;}
+        .movieWrap .cont-wrapper .info1 .summary-info > .poster > img {width: 100%;border-radius: 10px;}
         .movieWrap .cont-wrapper .info1 .details-info {}
-        .movieWrap .cont-wrapper .info1 .details-info > .story {display: -webkit-box;-webkit-line-clamp: 2;-webkit-box-orient:vertical;margin: var(--inner-half) 0;text-overflow: ellipsis;word-break: break-all;overflow: hidden;}
+        .movieWrap .cont-wrapper .info1 .details-info > .story {margin: var(--inner-half) 0;}
+        .movieWrap .cont-wrapper .info1 .details-info > .story > p {display: -webkit-box;-webkit-line-clamp: 2;-webkit-box-orient:vertical;text-overflow: ellipsis;word-break: break-all;overflow: hidden;}
+        .movieWrap .cont-wrapper .info1 .details-info > .story > .more {color: var(--color-gray);}
         .movieWrap .cont-wrapper .info1 .details-info > .review {display: flex;justify-content: space-between;margin-bottom: var(--inner-half);}
         .movieWrap .cont-wrapper .info1 .details-info > .review > div {background-color: var(--color-sub);width: 100%;padding: var(--inner-half);text-align: center;font-weight: bold;border-radius:10px;}
         .movieWrap .cont-wrapper .info1 .details-info > .review > div:not(div:last-child) {margin-right: 5px;}
         .movieWrap .cont-wrapper .info1 .details-info > .review > div > span {font-size: var(--font-small);color:var(--color-main);}
         .movieWrap .cont-wrapper .info1 .details-info > .review > div .star {color:var(--color-red);}
         .movieWrap .cont-wrapper .info1 .details-info > .booking {display: flex;justify-content: space-between;border-top: 1px solid var(--color-border);padding-top: var(--inner-half);}
-        .movieWrap .cont-wrapper .info1 .details-info > .booking > a {width:100%;border:1px solid var(--color-border);padding: var(--inner-half);text-align: center;color:inherit;border-radius: 5px;}
-        .movieWrap .cont-wrapper .info1 .details-info > .booking > a:last-child {width: 20%;margin-left: 5px;color:var(--color-red);}
-        .poster > img,
-        .photo > img {width: 100px;}
+        .movieWrap .cont-wrapper .info1 .details-info > .booking > * {width:100%;border:1px solid var(--color-border);padding: var(--inner-half);text-align: center;color:inherit;border-radius: 5px;}
+        .movieWrap .cont-wrapper .info1 .details-info > .booking > span {width: 20%;margin-left: 5px;color:var(--color-red);}
+        /* 기본 정보 */
+        .movieWrap .cont-wrapper .info2 {display:none;background-color: var(--color-main);}
+        .movieWrap .cont-wrapper .info2 .basic {display: flex;justify-content: space-between;margin-bottom: var(--inner-half);}
+        .movieWrap .cont-wrapper .info2 .basic > .text {padding-left:var(--inner-half);border-left: 5px solid var(--color-sub);}
+        .movieWrap .cont-wrapper .info2 .basic > .text > p:not(p:last-child) {padding-bottom: var(--inner-half);}
+        .movieWrap .cont-wrapper .info2 .basic > .text > p > span {padding-right:5px;color:var(--color-gray);}
+        .movieWrap .cont-wrapper .info2 .basic > .poster {width: 100px;}
+        .movieWrap .cont-wrapper .info2 .basic > .poster > img {width: 100%;border-radius: 10px;}
+        .movieWrap .cont-wrapper .info2 .booking {display: flex;justify-content: space-between;padding-top: var(--inner-half);}
+        .movieWrap .cont-wrapper .info2 .booking > * {width:100%;border:1px solid var(--color-border);padding: var(--inner-half);text-align: center;color:inherit;border-radius: 5px;}
+        .movieWrap .cont-wrapper .info2 .booking > span {width: 20%;margin-left: 5px;color:var(--color-red);}
+        /* 감독/출연 */
+        .movieWrap .cont-wrapper .info3 {display:none;background-color: var(--color-main);}
+        .movieWrap .cont-wrapper .info3 .info-menu {display: flex;border-bottom: 1px solid var(--color-border);}
+        .movieWrap .cont-wrapper .info3 .info-menu > li {position: relative;margin-right: var(--inner-half);padding-bottom: var(--inner-half);}
+        .movieWrap .cont-wrapper .info3 .info-menu > li > span {display:none;position: absolute;top:100%;left: 0;width: 100%;border-bottom: 2px solid var(--color-main);}
+        .movieWrap .cont-wrapper .info3 .info-menu > li:first-child > span {display: block;}
+        .movieWrap .cont-wrapper .info3 .info-cont {padding-top: var(--inner-padding);padding-bottom: var(--inner-half);}
+        .movieWrap .cont-wrapper .info3 .info-cont > h3 {font-size: var(--font-big);} 
+        .movieWrap .cont-wrapper .info3 .info-cont > .people {display: flex;padding-top: var(--inner-padding);padding-bottom: var(--inner-half);overflow-x: scroll;}
+        .movieWrap .cont-wrapper .info3 .info-cont > .people::-webkit-scrollbar {display: none;}
+        .movieWrap .cont-wrapper .info3 .info-cont > .people > a {flex-shrink: 0;position: relative;;width: 90px;height:160px;overflow: hidden;border: 1px solid var(--color-border);border-radius: 10px;margin-right: var(--inner-half);box-shadow: 0 2px 3px var(--rgba-black);}
+        .movieWrap .cont-wrapper .info3 .info-cont > .people .photo > img {width: 100%;}
+        .movieWrap .cont-wrapper .info3 .info-cont > .people .txt {position: absolute;bottom:0;left:0;width:100%;background-color: var(--color-white);padding: var(--inner-half);}
+        .movieWrap .cont-wrapper .info3 .director {display: block;}
+        .movieWrap .cont-wrapper .info3 .actor {display: none;}
     </style>
 </head>
 <body>
@@ -98,6 +125,7 @@
                     <div class="details-info">
                         <div class="story">
                             <p>미국 LA, 거액의 의뢰를 받은 무당 ‘화림’(김고은)과 ‘봉길’(이도현)은 기이한 병이 대물림되는 집안의 장손을 만난다. 조상의 묫자리가 화근임을 알아챈 ‘화림’은 이장을 권하고, 돈 냄새를 맡은 최고의 풍수사 ‘상덕’(최민식)과 장의사 ‘영근’(유해진)이 합류한다. “전부 잘 알 거야… 묘 하나 잘못 건들면 어떻게 되는지” 절대 사람이 묻힐 수 없는 악지에 자리한 기이한 묘. ‘상덕’은 불길한 기운을 느끼고 제안을 거절하지만, ‘화림’의 설득으로 결국 파묘가 시작되고… 나와서는 안될 것이 나왔다.</p>
+                            <span class="more">더보기</span>
                         </div><!--story-->
                         <div class="review">
                             <div>
@@ -115,82 +143,121 @@
                         </div><!--review-->
                         <div class="booking">
                             <a href="#">예매하기</a>
-                            <a href="#">♡</a>
+                            <span href="#">♡</span>
                         </div><!--booking-->
                     </div><!--details-info-->
                 </div><!--info-wrapper-->
             </div><!--cont-item-->
             <div class="cont-item info2">
-                <div class="basic">
-                    <div class="text">
-                        <p><span>개봉</span>2024.02.22</p>
-                        <p><span>등급</span>15세 관람가</p>
-                        <p><span>장르</span>미스터리, 공포</p>
-                        <p><span>국가</span>대한민국</p>
-                        <p><span>러닝타임</span>134분</p>
-                        <p><span>배급</span>(주)쇼박스</p>
-                    </div><!--text-->
-                    <div class="poster">
-                        <img src="images/파묘봉길.jpeg">
-                    </div><!--poster-->
-                </div><!--basic-->
-                <div class="booking">
-                    <a href="#">예매하기</a>
-                    <a href="#">♡</a>
-                </div><!--booking-->
+                <div class="info-wrapper">
+                    <div class="basic">
+                        <div class="text">
+                            <p><span>개봉</span>2024.02.22</p>
+                            <p><span>등급</span>15세 관람가</p>
+                            <p><span>장르</span>미스터리, 공포</p>
+                            <p><span>국가</span>대한민국</p>
+                            <p><span>러닝타임</span>134분</p>
+                            <p><span>배급</span>(주)쇼박스</p>
+                        </div><!--text-->
+                        <div class="poster">
+                            <img src="images/파묘봉길.jpeg">
+                        </div><!--poster-->
+                    </div><!--basic-->
+                    <div class="booking">
+                        <a href="#">예매하기</a>
+                        <span href="#">♡</span>
+                    </div><!--booking-->
+                </div><!--info-wrapper-->
             </div><!--cont-item-->
             <div class="cont-item info3">
-                <div>
-                    <p>감독</p>
-                    <div class="people">
-                        <a href="#">
-                            <div class="photo">
-                                <img src="images/파묘프로필.jpeg">
-                            </div><!--photo-->
-                            <div class="txt">
-                                <p>최민식</p>
-                                <span>감독</span>
-                            </div><!--txt-->
-                        </a>
-                    </div><!--people-->
-                </div>
-                <div>
-                    <p>주연</p>
-                    <div class="people">
-                        <a href="#">
-                            <div class="photo">
-                                <img src="images/파묘프로필.jpeg">
-                            </div><!--photo-->
-                            <div class="txt">
-                                <p>최민식</p>
-                            </div><!--txt-->
-                        </a>
-                        <a href="#">
-                            <div class="photo">
-                                <img src="images/파묘프로필.jpeg">
-                            </div><!--photo-->
-                            <div class="txt">
-                                <p>최민식</p>
-                            </div><!--txt-->
-                        </a>
-                        <a href="#">
-                            <div class="photo">
-                                <img src="images/파묘프로필.jpeg">
-                            </div><!--photo-->
-                            <div class="txt">
-                                <p>최민식</p>
-                            </div><!--txt-->
-                        </a>
-                        <a href="#">
-                            <div class="photo">
-                                <img src="images/파묘프로필.jpeg">
-                            </div><!--photo-->
-                            <div class="txt">
-                                <p>최민식</p>
-                            </div><!--txt-->
-                        </a>
-                    </div><!--people-->
-                </div>
+                <div class="info-wrapper">
+                    <ul class="info-menu">
+                        <li>감독<span></span></li>
+                        <li>배우<span></span></li>
+                    </ul><!--info-menu-->
+                    <div class="info-cont director">
+                        <h3>감독</h3>
+                        <div class="people">
+                            <a href="#">
+                                <div class="photo">
+                                    <img src="images/파묘프로필.jpeg">
+                                </div><!--photo-->
+                                <div class="txt">
+                                    <p>최민식</p>
+                                    <span>감독</span>
+                                </div><!--txt-->
+                            </a>
+                        </div><!--people-->
+                    </div>
+                    <div class="info-cont actor">
+                        <h3>주연</h3>
+                        <div class="people">
+                            <a href="#">
+                                <div class="photo">
+                                    <img src="images/파묘프로필.jpeg">
+                                </div><!--photo-->
+                                <div class="txt">
+                                    <p>최민식</p>
+                                    <span>김상덕 역</span>
+                                </div><!--txt-->
+                            </a>
+                            <a href="#">
+                                <div class="photo">
+                                    <img src="images/파묘프로필.jpeg">
+                                </div><!--photo-->
+                                <div class="txt">
+                                    <p>최민식</p>
+                                    <span>김상덕 역</span>
+                                </div><!--txt-->
+                            </a>
+                            <a href="#">
+                                <div class="photo">
+                                    <img src="images/파묘프로필.jpeg">
+                                </div><!--photo-->
+                                <div class="txt">
+                                    <p>최민식</p>
+                                    <span>김상덕 역</span>
+                                </div><!--txt-->
+                            </a>
+                            <a href="#">
+                                <div class="photo">
+                                    <img src="images/파묘프로필.jpeg">
+                                </div><!--photo-->
+                                <div class="txt">
+                                    <p>최민식</p>
+                                    <span>김상덕 역</span>
+                                </div><!--txt-->
+                            </a>
+                            <a href="#">
+                                <div class="photo">
+                                    <img src="images/파묘프로필.jpeg">
+                                </div><!--photo-->
+                                <div class="txt">
+                                    <p>최민식</p>
+                                    <span>김상덕 역</span>
+                                </div><!--txt-->
+                            </a>
+                            <a href="#">
+                                <div class="photo">
+                                    <img src="images/파묘프로필.jpeg">
+                                </div><!--photo-->
+                                <div class="txt">
+                                    <p>최민식</p>
+                                    <span>김상덕 역</span>
+                                </div><!--txt-->
+                            </a>
+                            <a href="#">
+                                <div class="photo">
+                                    <img src="images/파묘프로필.jpeg">
+                                </div><!--photo-->
+                                <div class="txt">
+                                    <p>최민식</p>
+                                    <span>김상덕 역</span>
+                                </div><!--txt-->
+                            </a>
+                        </div><!--people-->
+                    </div>
+                </div><!--info-wrapper-->
             </div><!--cont-item-->
             <div class="cont-item info4">
 
@@ -203,5 +270,23 @@
             </div><!--cont-item-->
         </div><!--cont-wrapper-->
     </div><!--movieWrap-->
+
+    <script src="https://code.jquery.com/jquery-latest.min.js"></script>
+    <script>
+        // 영화 정보 탑 메뉴
+        $('.menu-list > .menu-item').click(function() {
+            let idx = $(this).index();
+            $('.cont-item').eq(idx).show();
+            $('.cont-item').eq(idx).siblings().hide();
+        });
+        // 감독/배우 메뉴
+        $('.info-menu > li').click(function() {
+            let idx = $(this).index();
+            $(this).children().show();
+            $(this).siblings().children().hide();
+            $('.info-cont').eq(idx).show();
+            $('.info-cont').eq(idx).siblings('.info-cont').hide();
+        });
+    </script>
 </body>
 </html>
